# WorkerManageSystem

./: CMakeLists.txt  EmployeeSystem.cpp
include/: CBoss.h  CCtrlSystem.h  CEmployee.h  CManager.h
src/: CBoss.cpp  CCtrlSystem.cpp  CEmployee.cpp  CManager.cpp
